# uroman-rs

./: .gitignore  Cargo.toml  PYTHON.md  README.md  pyproject.toml
examples/: basic.rs  python_example.py
src/: core.rs  edge.rs  lattice.rs  lib.rs  main.rs  python.rs  rom_rule.rs  utils.rs
tests/: test.rs  test_bindings.py  unit_tests.rs
