[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uroman-rs"
version = "0.6.2"
description = "A blazingly fast universal romanizer for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["uroman", "romanization", "unicode", "nlp", "transliteration"]
authors = [
    { name = "stellanomia", email = "fulmlumo@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "maturin>=1.9.6",
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/LennartKeller/uroman-rs"
Repository = "https://github.com/LennartKeller/uroman-rs"

[tool.maturin]
features = ["python"]
module-name = "uroman_rs"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "uroman>=1.3.1.1",
]
